22/05/2025:
	- Fix to incorrect resolution calculation in View.cc


19/05/2025:
	- Make sure ICC profile buffer is freed in JPEGImage.cc.
	- Updated make install command to correctly create all leading directories.


17/05/2025:
	- Added check for unsupported HTTP methods in Main.cc and added convenience function in IIPResponse class
	  to generate appropriate HTTP headers for 405, 304 and 204 status codes


12/05/2025:
	- Minor updates to avoid SonarQube warnings


10/05/2025:
	- Updated IIP metadata object to return real iipsrv version


30/04/2025:
	- Added default initialization of cielab values in Transform::LAB2sRGB() function


28/04/2025:
	- Eliminate compilation warning with clang
	- Fixed TPTImage problem with referencing of potentially uninitialized vector for tiled but non-pyramid TIFFs.
	  Fixes https://github.com/ruven/iipsrv/issues/278


25/04/2025:
	- Added ability to call extra image processing functionality from IIIF through the 'qualities' segment of
	  the API. This adds constrast stretching, histogram equalization, image negative and logarithm options.
	  Disabled by default, but can be actived by setting the IIIF_EXTENSIONS startup parameter to 1 (0 by default).


24/04/2025:
	- Inject rights statement from COPYRIGHT into image metadata if this does not already exist to allow
	  Compressor classes to include this in image output metadata


23/04/2025:
	- Modification to not add 'color' to IIIF extraQualities field in info.json if image is monochrome


22/04/2025:
	- Added convolution to JTL tile pipeline and switched convolution implementation to use edge extension
	  rather than edge wrapping


20/04/2025:
	- Fixed typo in configure.ac.
	- Added TIFF to IIIF extraFormats field plus other cleanups in info.json.


18/04/2025:
	- Make sure sizes are correctly rounded when checking for invalid upscaling


02/04/2025:
	- Fix to use explicit compression types in setQuality() function in TIFFCompressor class.